--- a/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
+++ b/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
@@ -13,16 +13,20 @@
   
 	<!-- Database connection information -->
 	<database>
-    <provider name="MySql"/>
-    <dataSource name="SDsDataSource" connectionString="Data Source=218.146.9.246;Initial Catalog=vrpfx;Persist Security Info=True;User ID=root;Password=!!wjddk4455"/>
-	</database>
+    <!--<provider name="MySql"/>
+    <dataSource name="SDsDataSource" connectionString="Data Source=218.146.9.246;Initial Catalog=vrpfx;Persist Security Info=True;User ID=root;Password=!!wjddk4455"/>-->
+
+    <provider name="Postgres"/>
+    <dataSource name="app" connectionString="Server=10.2.30.75;Port=5302;Database=SFKMDDEV;Uid=sfmcuser;Pwd=dmesdb1!;timeout=1000;"/>
+  </database>
 
 	<sqlMaps>
 		<!--<sqlMap resource="./Sample.xml" />-->
     <!--<sqlMap resource="${root}Maps/Account.xml"/>-->
-    <!--Sample-->    
-    <sqlMap embedded="SDs.FiveM.Model.Service.Sample.Maps.AdminUserMap.xml,         SDs.FiveM.Model" />
+    <!--Sample-->
+    <sqlMap embedded="SDs.FiveM.Model.Service.PostgreSQL.Maps.DefaultMap.xml,         SDs.FiveM.Model" />
 
+    <sqlMap embedded="SDs.FiveM.Model.Service.Sample.Maps.AdminUserMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.Lotto.LottoMakerView.Maps.LottoMakerViewMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.ChartView.Maps.ChartViewMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.AdminView.Maps.AdminViewMap.xml,         SDs.FiveM.Model" />
