--- a/FiveMKoreaServer주식/SDs-FiveM-Config/providers.config
+++ b/FiveMKoreaServer주식/SDs-FiveM-Config/providers.config
@@ -21,6 +21,25 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   parameterPrefix="?"
   allowMARS="false"
   />
+  <provider
+    name="Postgres" 
+    description="PostgreSql, Npgsql provider V3.2.0" 
+    enabled="true" 
+    assemblyName="Npgsql, Version=2.2.3, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" 
+    connectionClass="Npgsql.NpgsqlConnection" 
+    commandClass="Npgsql.NpgsqlCommand" 
+    parameterClass="Npgsql.NpgsqlParameter" 
+    parameterDbTypeClass="NpgsqlTypes.NpgsqlDbType" 
+    parameterDbTypeProperty="NpgsqlDbType" 
+    dataAdapterClass="Npgsql.NpgsqlDataAdapter" 
+    commandBuilderClass="Npgsql.NpgsqlCommandBuilder" 
+    usePositionalParameters="false" 
+    useParameterPrefixInSql="true" 
+    useParameterPrefixInParameter="true" 
+    parameterPrefix=":"
+    allowMARS="true"    
+  />
+  
   <!--
 <provider 
 	  name="sqlServer1.0" 
