--- a/FiveMKoreaServer주식/SDs-FiveM-View/SDs.FiveM.View.csproj
+++ b/FiveMKoreaServer주식/SDs-FiveM-View/SDs.FiveM.View.csproj
@@ -83,6 +83,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -130,6 +131,12 @@
     </Compile>
     <Compile Include="View\ChartView.Designer.cs">
       <DependentUpon>ChartView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\JavaScriptTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\JavaScriptTest.Designer.cs">
+      <DependentUpon>JavaScriptTest.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Lotto\LottoMakerView.cs">
       <SubType>Form</SubType>
@@ -195,6 +202,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\ChartView.resx">
       <DependentUpon>ChartView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\JavaScriptTest.resx">
+      <DependentUpon>JavaScriptTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Lotto\LottoMakerView.resx">
       <DependentUpon>LottoMakerView.cs</DependentUpon>
